# HikVision-interface-cpp

./: .gitignore  README.md
camera/: CMakeLists.txt
camera/config/: camera-params.yaml  ost.txt  ost.yaml
camera/example/: CMakeLists.txt  example.cpp
camera/include/: HikCuda.hpp  HikCudaV2.hpp  HikGeneral.hpp  HikGeneralV2.hpp
camera/include/interface/: HikVision.hpp
camera/include/utils/: getParam.hpp
camera/src/: camera.cpp
